--- a/README.me
+++ b/README.me
@@ -1,1 +1,3 @@
-https://documenter.getpostman.com/view/18250291/UVsPPQ2n
+Deploy : https://dwf7-frontend.up.railway.app/
+Backend : https://github.com/JtoralesK/petApxBackend
+Anntiguo Proyecto (back y front juntos): https://github.com/JtoralesK/apx-desafio-mod7
